--- a/clonevelog/package.json
+++ b/clonevelog/package.json
@@ -16,16 +16,18 @@
     "axios": "^0.23.0",
     "connected-react-router": "^6.9.1",
     "history": "4.10.1",
+    "http-server": "^14.0.0",
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-modal": "^3.14.3",
     "react-markdown": "^7.0.1",
+    "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-action": "^1.2.2",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
