--- a/clonevelog/package.json
+++ b/clonevelog/package.json
@@ -19,8 +19,9 @@
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-modal": "^3.14.3",
+    "react-icons": "^4.3.1",
     "react-markdown": "^7.0.1",
+    "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
